Bug 143624 - FILESAVE PPTX Slideshow setting “Manual forwarding” is not saved
Summary: FILESAVE PPTX Slideshow setting “Manual forwarding” is not saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: filter:pptx
Depends on:
Blocks: PPTX-SlideShowSettings
  Show dependency treegraph
 
Reported: 2021-07-30 12:07 UTC by NISZ LibreOffice Team
Modified: 2021-08-24 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot of the original and exported document side by side in Impress (101.04 KB, image/png)
2021-07-30 12:07 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-07-30 12:07:56 UTC
Created attachment 173978 [details]
Screenshot of the original and exported document side by side in Impress

This is a followup to bug 142915
attachment 172976 [details] contains the slide show setting “Manual forwarding” turned on.
When opened in Impress the Slide Show Settings dialog displays the “Change slides manually” box checked, correctly.
After saving this file with the same options and reopening it, Impress will uncheck the “Change slides manually” box, the export is incorrect.

Steps to reproduce:
1.	Open attachment 172976 [details] 
2.	Open Slide Show – Slide Show Settings menu
3.	Check the Change slides manually box (checked)
4.	Save the file, reopen it
5.	Check the Change slides manually box

Actual results:
The “Change slides manually” box is unchecked.
Expected results:
The “Change slides manually” box should be checked.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2021-08-19 15:34:10 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/351a4308ba4708cf0cf9fd53d9f3dee0de1515e5

tdf#143624 PPTX: slideshow setting “Manual forwarding” not exported

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-08-20 07:46:06 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/6e9e0ad4e2ab485eefe1529d72d623101009e120

tdf#143624 PPTX: slideshow setting “Manual forwarding” not exported

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2021-08-24 18:54:34 UTC
Everything fine now. Thanks Tibor for your work on this bug.

Verified in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: fbe183bbb05220a4ccc51952445b1797bb498403
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded