tdf#143624 PPTX: slideshow setting “Manual forwarding” not exported

Follow-up to commit f8ddaaf0f5e1fb61e0d4404ea28757bc652ae4be
(tdf#142915 PPTX import: support for presentation's timing attribute).

Change-Id: I1b175d406d2cd0fc40ba7085517709fb477fed58
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120529
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>